# skills

./: .gitignore  AGENTS.md  README.md  guide.md  install.sh  prek.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: proposal.md
.github/workflows/: opencode.yml  proposal-update.yml
ast-grep/rules/: no-dict-alias.yml  no-dict-call-return.yml  no-dict-literal-return.yml  no-dict-return-annotation.yml
docs/: engineering-standards.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
review/: pyproject.toml
review/review/: __init__.py  app.py  gh.py
scaffolding/: __init__.py  agent_config.py  checks.py  cli.py  components.py  console.py  doctor.py  engine.py  facts.py  ops.py  plan.py  prompts.py  settings.py  templates_registry.py
scaffolding/templates/: agents-workspace-defaults.md  prek-generic.toml  prek-python.toml  pyproject-template.toml  standards-index.md
scaffolding/templates/agents-rules/: core-logger.md  log-get-logger.md  log-no-print.md  settings-module.md
scaffolding/templates/ast-grep-rules/: log-get-logger.yml  log-no-print.yml  no-dict-call-return.yml  no-dict-return-annotation.yml  settings-module.yml
scaffolding/templates/github/: dependabot.yml
scaffolding/templates/github/workflows/: docker.yml  pip-audit.yml  proposal-update.yml  pypi.yml  release.yml  tests.yml  zizmor.yml
scaffolding/templates/snippets/core/: logger.py
setup/: guide.md  install.sh
skills/productivity/journalist/scripts/: query_journals.py
skills/productivity/setup-repo/: SKILL.md
skills/productivity/setup-repo/ast-grep-rules/: no-dict-literal-return.yml
tests/: test_engine.py
