[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "scaffolding"
dynamic = ["version"]
description = "Deterministic, clean-adds-only repo bootstrap CLI (agent-driven)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cyclopts>=3.0",
  "questionary>=2.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "rich>=13.0",
]

[project.scripts]
scaffolding = "scaffolding.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.7.0",
]

# Version derived from git tags (vX.Y.Z) by hatch-vcs.
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["scaffolding"]

[tool.hatch.build.targets.sdist]
include = ["scaffolding", "README.md", "guide.md"]

[tool.ruff]
line-length = 100
# Vendored skill scripts are independent artifacts; lint only the tool's code.
extend-exclude = ["skills"]
force-exclude = true

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "SIM",
  "RET",
  "C4",
  "DTZ",
  "PTH",
  "LOG",
  "S",
  "C90",
  "G",
  "UP",
  "RUF",
  "TID",
  "ERA001",
  "D200",
  "D205",
  "D212",
  "D300",
  "D301",
  "D400",
  "D401",
  "D403",
  "D405",
  "D406",
  "D407",
  "D408",
  "D409",
  "D410",
  "D411",
  "D412",
  "D413",
  "D414",
  "D415",
  "D417",
  "D418",
  "D419",
]
# This is a CLI orchestrator: shelling out to known tools (git, uv, npx,
# varlock, gh) by name is intentional, so the subprocess-audit rules that flag
# that pattern are disabled. The rest of the security ruleset stays on.
ignore = ["S603", "S607"]
task-tags = ["TODO", "FIXME", "XXX", "MARK"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

# Ban relative imports (e.g. `from .plan import ...`) — use absolute
# `from scaffolding.plan import ...` so modules are unambiguous and movable.
[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pyrefly]
project-excludes = [
  "**/node_modules",
  "**/__pycache__",
  "**/.venv/**/*",
  "skills/**/*",
  "review/**/*",  # separate distribution with its own env/import-root
]
use-ignore-files = false
disable-project-excludes-heuristics = true

[tool.pytest.ini_options]
testpaths = ["tests"]
