[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "review"
version = "0.1.0"
description = "TUI to review scaffolding rule-proposal issues on GitHub."
requires-python = ">=3.11"
dependencies = [
  "textual>=0.60",
]

[project.scripts]
review = "review.app:main"

[tool.hatch.build.targets.wheel]
packages = ["review"]
